force-app/main/default/objects/Certification__c/fields/Certification_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Certification_Assessment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the lookup to the Assessment Definition Record.</description>
    <label>Certification Assessment</label>
    <referenceTo>AssessmentDefinition</referenceTo>
    <relationshipLabel>Certifications</relationshipLabel>
    <relationshipName>Certifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>