force-app/main/default/objects/Certification__c/fields/Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_Date__c</fullName>
    <description>Date of the last exam attempt</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Certification Date</label>
    <type>Date</type>
</CustomField>