force-app/main/default/objects/Certification__c/fields/Certification_Exam_Score__c.field-meta.xml
<CustomField>
    <fullName>Certification_Exam_Score__c</fullName>
    <description>Score from the last exam attempt.</description>
    <label>Certification Exam Score %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>