force-app/main/default/objects/Certification__c/fields/Certification_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_Expiration_Date__c</fullName>
    <description>Date when Certificate expires. Only when result is Pass.</description>
    <formula>IF( 
   ISPICKVAL( Certification_Results__c , &quot;Passed&quot;),
   ADDMONTHS( Certification_Date__c ,24),
   NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certification Expiration Date</label>
    <type>Date</type>
</CustomField>