force-app/main/default/objects/Certification__c/fields/Certification_Results__c.field-meta.xml
<CustomField>
    <fullName>Certification_Results__c</fullName>
    <description>Results of the last exam attempt</description>
    <label>Certification Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>