force-app/main/default/objects/Certification__c/fields/Certification_Test_Name__c.field-meta.xml
<CustomField>
    <fullName>Certification_Test_Name__c</fullName>
    <description>This is the name of the Certification exam.</description>
    <formula>Certification_Assessment__r.Test_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certification Test Name</label>
    <type>Text</type>
</CustomField>