force-app/main/default/objects/Certification__c/fields/CertificationDate__c.field-meta.xml
<CustomField>
    <fullName>CertificationDate__c</fullName>
    <description>Presents the date the certificate was earned in a standardized format.</description>
    <formula>Text( MONTH(Certification_Date__c) ) + &apos;/&apos; + Text(DAY(Certification_Date__c)) + &apos;/&apos; +  Text(YEAR(Certification_Date__c))</formula>
    <label>CertificationDate</label>
    <type>Text</type>
</CustomField>