force-app/main/default/objects/Certification__c/fields/Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Completion_Status__c</fullName>
    <description>This field tracks the completion of the Certification Exam. Until the Certification Status is not Passed, the Completion status will be Pending</description>
    <label>Completion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>