force-app/main/default/objects/Certification__c/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <description>The CSM who creates the exam.</description>
    <formula>IF(
  ISBLANK(Trainer_Name__r.Primary_CSM__r.FirstName),
  Trainer_Name__r.Primary_CSM__r.LastName,
  Trainer_Name__r.Primary_CSM__r.FirstName &amp; &quot; &quot; &amp; Trainer_Name__r.Primary_CSM__r.LastName
)</formula>
    <label>CSM</label>
    <type>Text</type>
</CustomField>