force-app/main/default/objects/Certification__c/fields/isRunningAccountUser__c.field-meta.xml
<CustomField>
    <fullName>isRunningAccountUser__c</fullName>
    <formula>$User.Id == Trainer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isRunningAccountUser</label>
    <type>Checkbox</type>
</CustomField>