force-app/main/default/objects/Certification__c/fields/Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>a temporary field that stores NA Classic Salesforce Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Legacy Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>