force-app/main/default/objects/Certification__c/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links the Certification to relevant Observation recorded for the Trainer</description>
    <label>Observation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Observation__c.Trainer_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Trainer_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Observation__c</referenceTo>
    <relationshipLabel>Certifications</relationshipLabel>
    <relationshipName>Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>