force-app/main/default/objects/Certification__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Product related to this certification</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Omnipod 5</fullName>
            </value>
            <value>
                <fullName>DASH</fullName>
            </value>
            <value>
                <fullName>UST400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>