force-app/main/default/objects/Certification__c/fields/Retake_Exam__c.field-meta.xml
<CustomField>
    <fullName>Retake_Exam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CSM to use this field to enable Trainers to retake the exam</description>
    <label>Retake Exam?</label>
    <type>Checkbox</type>
</CustomField>