force-app/main/default/objects/Certification__c/fields/Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Status_Icon__c</fullName>
    <formula>IF(
AND(
Certification_Expiration_Date__c &lt; TODAY() + 60, 
Certification_Expiration_Date__c &gt;= TODAY()
),
IMAGE(&quot;/img/msg_icons/warning24.png&quot;, &quot;Yellow&quot;),
IF(
Certification_Expiration_Date__c &lt; TODAY(),
IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;Red&quot;),
&apos;&apos;
)
)</formula>
    <label>Status Icon</label>
    <type>Text</type>
</CustomField>