force-app/main/default/objects/Certification__c/listViews/My_Completed_Certification.listView-meta.xml
<ListView>
    <fullName>My_Completed_Certification</fullName>
    <columns>NAME</columns>
    <columns>Certification_Test_Name__c</columns>
    <columns>CSM__c</columns>
    <columns>Product__c</columns>
    <columns>Completion_Status__c</columns>
    <columns>Certification_Results__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Certification_Expiration_Date__c</columns>
    <columns>Certification_Exam_Score__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isRunningAccountUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Completion_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>My Completed Certification</label>
</ListView>