force-app/main/default/objects/Certification__c/listViews/My_Pending_Certification.listView-meta.xml
<ListView>
    <fullName>My_Pending_Certification</fullName>
    <columns>NAME</columns>
    <columns>Certification_Test_Name__c</columns>
    <columns>CSM__c</columns>
    <columns>Product__c</columns>
    <columns>Completion_Status__c</columns>
    <columns>Certification_Results__c</columns>
    <columns>Certification_Date__c</columns>
    <columns>Certification_Expiration_Date__c</columns>
    <columns>Certification_Exam_Score__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isRunningAccountUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Completion_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>My Pending Certification</label>
</ListView>