force-app/main/default/objects/Certification__c/listViews/Trainer_Exam_Fail.listView-meta.xml
<ListView>
    <fullName>Trainer_Exam_Fail</fullName>
    <columns>NAME</columns>
    <columns>Trainer_Name__c</columns>
    <columns>Certification_Test_Name__c</columns>
    <columns>Certification_Date__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Certification_Results__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_WEEKS:2</value>
    </filters>
    <label>Trainer Exam-Fail</label>
    <sharedTo>
        <group>Clinical_Services_Manager</group>
    </sharedTo>
</ListView>